Adding navbar and footer, also setting a proxy to have Nginx getting to API.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ script:
 
 after_success:
   - ls -l *
+  - cp ./nginx/custom_orig.conf ./dist/
+  - ls -l *
 
 deploy:
   provider: bluemixcloudfoundry
