Fixing a minor issue on Nginx setting to proxy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 
 after_success:
   - ls -l *
-  - cp ./nginx/custom_orig.conf ./dist/
+  - cp ./nginx/custom_orig.conf ./dist/nginx.conf
   - ls -l *
 
 deploy:
